--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,11 @@ server.port=8090
 
 # Set here configurations for the database connection
 
-spring.datasource.url = jdbc:mysql://localhost:3306/OnlineBanking
+spring.datasource.url = jdbc:mysql://54.174.30.134:3306/OnlineBanking
 
 # Username and secret
-spring.datasource.username = scott
-spring.datasource.password = tiger
+spring.datasource.username = smartbank
+spring.datasource.password = smartbank#321
 
 # ===============================
 # = JPA / HIBERNATE
