--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8090
 
 # Set here configurations for the database connection
 
-spring.datasource.url = jdbc:mysql://54.174.30.134:3306/OnlineBanking
+spring.datasource.url = jdbc:mysql://smartbank.cw6q8ucxb9af.us-east-1.rds.amazonaws.com/OnlineBanking
 
 # Username and secret
 spring.datasource.username = smartbank
