--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,24 @@
 
 server.port=8090
-
+spring.application.name=smartbank-service
 # ===============================
 # = DATA SOURCE
 # ===============================
 
 # Set here configurations for the database connection
 
-spring.datasource.url = jdbc:mysql://smartbank.cw6q8ucxb9af.us-east-1.rds.amazonaws.com:3306/OnlineBanking
+##spring.datasource.url = jdbc:mysql://smartbank.cw6q8ucxb9af.us-east-1.rds.amazonaws.com:3306/OnlineBanking
+##spring.datasource.url = jdbc:mysql://54.174.30.134:3306/OnlineBanking
 
 # Username and secret
-spring.datasource.username = smartbank
-spring.datasource.password = smartbank#321
+##spring.datasource.username = smartbank
+##spring.datasource.password = smartbank#321
 
+
+###########For Local test
+spring.datasource.url = jdbc:mysql://localhost:3306/OnlineBanking
+spring.datasource.username = scott
+spring.datasource.password = tiger
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
@@ -30,3 +36,17 @@ spring.jpa.hibernate.ddl-auto = update
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+
+
+#eureka
+eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+#indicates the frequency the client sends heartbeat to server to indicate that it is alive.
+eureka.instance.lease-renewal-interval-in-seconds=30
+#indicates the duration the server waits since it received the last heartbeat before it can evict an instance from its registry
+eureka.instance.lease-expiration-duration-in-seconds=90
+
+#load balancing
+ribbon.eureka.enabled=true
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
