--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,19 +7,22 @@ spring.application.name=smartbank-service
 
 # Set here configurations for the database connection
 
-##spring.datasource.url = jdbc:mysql://smartbank.cw6q8ucxb9af.us-east-1.rds.amazonaws.com:3306/OnlineBanking
-##spring.datasource.url = jdbc:mysql://54.174.30.134:3306/OnlineBanking
 
-# Username and secret
-##spring.datasource.username = smartbank
-##spring.datasource.password = smartbank#321
+#####AWS RDS######
+spring.datasource.url = jdbc:mysql://smartlizzard.curspeqynm5y.us-east-1.rds.amazonaws.com:3306/smartbank
+spring.datasource.username = smartbank
+spring.datasource.password = P@ssw0rd
 
 
-###########For Local test
-spring.datasource.url = jdbc:mysql://localhost:3306/OnlineBanking
-spring.datasource.username = scott
-spring.datasource.password = tiger
+
+###########For Local test#########
+##spring.datasource.url = jdbc:mysql://localhost:3306/OnlineBanking
+##spring.datasource.username = scott
+##spring.datasource.password = tiger
 # ===============================
+
+
+
 # = JPA / HIBERNATE
 # ===============================
 spring.jpa.open-in-view=false
