--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,13 @@ server.port=8090
 
 # Set here configurations for the database connection
 
-spring.datasource.url = jdbc:mysql://54.174.30.134:3306/OnlineBanking
+spring.datasource.url = jdbc:mysql://smartlizzard.curspeqynm5y.us-east-1.rds.amazonaws.com:3306/smartbank
+spring.datasource.username = smartbank
+spring.datasource.password = P@ssw0rd
 
 # Username and secret
-spring.datasource.username = smartbank
-spring.datasource.password = smartbank#321
+###spring.datasource.username = smartbank
+##spring.datasource.password = smartbank#321
 
 # ===============================
 # = JPA / HIBERNATE
